--- a/Hashing/.vscode/settings.json
+++ b/Hashing/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.java": "java",
-        "list": "cpp"
+        "list": "cpp",
+        "ostream": "cpp"
     }
 }
