--- a/Hashing/.vscode/settings.json
+++ b/Hashing/.vscode/settings.json
@@ -3,6 +3,7 @@
         "*.java": "java",
         "list": "cpp",
         "ostream": "cpp",
-        "unordered_map": "cpp"
+        "unordered_map": "cpp",
+        "utility": "cpp"
     }
 }
